--- a/web_mock/main.css
+++ b/web_mock/main.css
@@ -158,8 +158,7 @@ main {
     width: 400px;
     background:rgb(255, 133, 133);
     border-radius: 30px;
-    /* top:calc(50% - 250px/2); */
-    bottom: 0;
+    top:calc(50% - 250px/2);
     left:calc(50% - 400px/2);
 }
 .page_modal .border {
@@ -175,16 +174,38 @@ main {
 
 .page_modal form {
     position: absolute;
-    text-align: center;
+    height: 95%;
+    width : 95%;
+    margin :auto;
+    /* top: calc(50% -); */
+    /* text-align: center; */
 }
 .page_modal form .input_text {
-
+    font-size: 20px;
+    box-sizing: border-box;
+    height: 12%;
+	width: 100%;
+	padding: 0.3em;
+	transition: 0.3s;
+	letter-spacing: 1px;
+	color: #aaaaaa;
+	border: none;
+    border-bottom: 2px solid #1b2538;
+    border-radius: 1em 1em 0 0;
+	background: #ffffff;
+}
+.page_modal form .input_text {
+    border-bottom: 2px solid #da3c41;
+    outline: none;
 }
 .page_modal form .input_article {
-    
+    resize: none;
+    width: 100%;
+    height: 76%;
 }
 .page_modal form .submit {
-    bottom:0;
+    width: 100%;
+    height: 12%;
 }
 
 /* animation */
